<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_home"
    tools:context="br.com.megaapps.mepoupe.View.LoginActivity">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_alignParentBottom="true"
        android:alpha="0.3">
    </View>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_logo_white" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/lay_top">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"


                    android:backgroundTint="@color/divider"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/light"
                    android:textColorHint="@color/divider"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_name"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/light"
                    android:textColorHint="@color/divider"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/enter"
                android:textColor="@color/light"
                android:textSize="@dimen/text_button" />

            <TextView
                android:id="@+id/txtRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot"
                android:textColor="@color/light"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/not_user"
                    android:textColor="@color/light"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="5dp"
                    android:text="@string/new_user"
                    android:textColor="@color/accent"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

