<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/accent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/txtTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chart"
                android:textAlignment="center"
                android:textColor="@color/light"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layHeader">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/divider"
                android:hint="@string/month"
                android:textColor="@color/light"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_month"
            android:textColorHint="@color/black">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"
                android:layout_margin="20dp"
                android:hint="@string/year"
                android:textColor="@color/light"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_below="@+id/input_layout_year"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"
                android:layout_margin="20dp"
                android:backgroundTint="@color/divider"
                android:hint="@string/type"
                android:textColor="@color/text"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btnPie"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button"
        android:layout_below="@+id/layContent"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textColor="@color/light"
        android:textSize="@dimen/text_button" />
</RelativeLayout>


