<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_bot"
    tools:context="br.com.megaapps.mepoupe.View.RegisterActivity">
    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_alignParentBottom="true"
        android:alpha="0.4">
    </View>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lay_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_logo_white" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/light"
                    android:textColor="@color/light"
                    android:textSize="@dimen/text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@color/light"
                    android:textColorHint="@color/light"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/light"
                    android:textColor="@color/light"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/light"
                    android:textColor="@color/light"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/save"
                android:textColor="@color/light"
                android:textSize="@dimen/text_button" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user"
                    android:textColor="@color/light"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="5dp"
                    android:text="@string/user_enter"
                    android:textColor="@color/accent"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

