<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lay_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHouse"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_pink" />

            <TextView
                android:id="@+id/txtHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/house"
                android:textColor="@color/pink"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_helth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHealth"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_blue_light" />

            <TextView
                android:id="@+id/txtHelth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/helth"
                android:textColor="@color/blue"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTransport"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_orange_light" />

            <TextView
                android:id="@+id/txtTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/transport"
                android:textColor="@color/orange"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_recreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRecreation"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_purple" />

            <TextView
                android:id="@+id/txtRecreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/recreation"
                android:textColor="@color/purple"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFood"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_red" />

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/food"
                android:textColor="@color/red"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_bills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBills"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_turquosi" />

            <TextView
                android:id="@+id/txtBills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/bills"
                android:textColor="@color/turquoisi"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNothing"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_gray_light" />

            <TextView
                android:id="@+id/txtNothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:text="@string/nothing"
                android:textColor="@color/gray"
                android:textSize="23sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>