<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
          android:id="@+id/lay_salary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <Button
              android:id="@+id/btnSalary"
              android:layout_width="32dp"
              android:layout_height="32dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="10dp"
              android:background="@drawable/circle_green_light" />

          <TextView
              android:id="@+id/txtSalary"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="13dp"
              android:text="@string/salary"
              android:textColor="@color/green"
              android:textSize="23sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/lay_other"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <Button
              android:id="@+id/btnOther"
              android:layout_width="32dp"
              android:layout_height="32dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="10dp"
              android:background="@drawable/circle_pink" />

          <TextView
              android:id="@+id/txtOther"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="13dp"
              android:text="@string/others"
              android:textColor="@color/pink"
              android:textSize="23sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/lay_nothing"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"

          android:orientation="horizontal">

          <Button
              android:id="@+id/btnNothing"
              android:layout_width="32dp"
              android:layout_height="32dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="10dp"
              android:background="@drawable/circle_gray_light" />

          <TextView
              android:id="@+id/txtNothing"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="13dp"
              android:text="@string/nothing"
              android:textColor="@color/gray"
              android:textSize="23sp" />

      </LinearLayout>

  </LinearLayout>
</android.support.v7.widget.CardView>