<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_chart"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.com.megaapps.mepoupe.View.ForgotActivity">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_alignParentBottom="true"
        android:alpha="0.3">
    </View>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/lay_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="Esqueceu sua senha?"
                android:textColor="@color/light"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/recover"
                android:textColor="@color/light"

                android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/light">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/divider"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"

                    android:textColor="@color/light"
                    android:textColorHint="@color/light"
                    android:textSize="@dimen/text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/send"
                android:textColor="@color/light"
                android:textSize="@dimen/text_button" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>

